fix: height issue on mobile filters menu

--- a/src/features/search/uni/SearchResults/index.css
+++ b/src/features/search/uni/SearchResults/index.css
@@ -5,6 +5,7 @@
 .filter-col {
   max-width: 320px;
   padding-inline: unset;
+  height: max-content !important;
 }
 
 .filter-col-container {
